syntax = "proto3";

option go_package = "github.com/ldsec/helium/pkg/api";

import "common.proto";

package helium_proto;
 
service SetupService {

    /* GetShare is used to get the share of the callee in the protocol described in the ShareRequest. */
    rpc GetShare (ShareRequest) returns (Share) {} 
    
    /* PutShare is used to push the caller's share in the protocol described by the Share.ProtocolDesc
    field to the callee. */
    rpc PutShare (Share) returns (Void) {}
}
